test/langtools/tools/javac/datum/DataClassAsSuper.out
DataClassAsSuper.java:10:30: compiler.err.cant.extend.record: (compiler.misc.bad.record.super)
DataClassAsSuper.java:15:37: compiler.err.cant.extend.record: (compiler.misc.bad.record.super)
2 errors
